# Simple3DRenderer

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  LICENSE.txt  MAPFORMAT.txt  Makefile  README.md  README.txt
res/models/: gold.mtl
source/: C3D.c  ColorMap.c  ColorMap.h  Controller.c  Controller.h  CursesDevice.c  Device.h  GameLoop.c  GameLoop.h  Geometry.c  Geometry.h  ObjLoader.c  ObjLoader.h  Rasterizer.c  Rasterizer.h  RenderTypes.h  Splash.c  Splash.h  VecMath.c  VecMath.h  VecTypes.c  VecTypes.h
src/core/: C3D.c  CMakeLists.txt  GameLoop.c  ObjLoader.c  ObjLoader.h  Splash.c
src/graphics/: CMakeLists.txt  ColorMap.c  Controller.c  Controller.h  CursesDevice.c  Device.h  Geometry.c  Geometry.h  Rasterizer.c  Rasterizer.h  RenderTypes.h
src/graphics/curses/: build.cmake
src/math/: CMakeLists.txt  VecMath.c  VecMath.h  VecTypes.c
